paper-scissors-stone.htm

--- a/paper-scissors-stone/paper-scissors-stone.htm
+++ b/paper-scissors-stone/paper-scissors-stone.htm
@@ -14,11 +14,11 @@
     <header>
         <div class="wapper">
             <img src="./scssors.png" alt="scssors">
-            <button class="pssButton" value="scissors" >剪刀</button>
+            <button class="pssButton" value="scissors" >scissors</button>
             <img src="./rock.png" alt="stone">
-            <button class="pssButton" value="stone"  >石頭</button>              
+            <button class="pssButton" value="stone"  >stone</button>              
             <img src="./paper.png" alt="paper">
-            <button class="pssButton" value="paper">布</button>         
+            <button class="pssButton" value="paper" >paper</button>         
         </div>
 
             <div id="result"></div>
